# Machine-learning-techniques-in-finance

./: .gitignore  pyproject.toml
src/: 01_ML_techniques.ipynb  03_CNN_LSTM_ConvLSTM.ipynb  03_MultiStep_LSTM_model.ipynb  04_pyGAM_model.ipynb  05_AR_ARIMA_model.ipynb  05_TSA_models.ipynb  06_Time_Series_Transformers.ipynb  07_Autoencoder_TimeSeries.ipynb  08_Theta_model.ipynb  09_Reinforcement_learning_trading.ipynb  10_Markov_Model_and_Regimes.ipynb  11_Bayesian_model.ipynb  12_Monte_Carlo_forecasting.ipynb  13_preTransformations_TimeSeries.ipynb  14_Image_Transformation.ipynb  15_Sentiment_features.ipynb  16_N-BEATS_model.ipynb
src/modules/: DHMM.py  HMM.py  backtester.py  data_fetcher.py  indicators.py  risk.py
