[tool.poetry]
name = "machine-learning-techniques-in-finance"
version = "0.1.0"
description = ""
authors = ["BaptisteZloch <bzloch@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "^2.11.0"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"
numpy = "^1.24.2"
scipy = "^1.10.1"
kucoin-python = "^1.0.11"
matplotlib = "^3.7.0"
plotly = "^5.13.1"
nbformat = "^5.7.3"
mlxtend = "^0.21.0"
seaborn = "^0.12.2"
pygam = "^0.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
