[tool.poetry]
name = "machine-learning-techniques-in-finance"
version = "0.1.0"
description = ""
authors = ["BaptisteZloch <bzloch@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "^2.11.0"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"
numpy = "1.23.5"
scipy = "^1.10.1"
statsmodels = "^0.14.0"
kucoin-python = "^1.0.11"
matplotlib = "^3.7.0"
plotly = "^5.13.1"
nbformat = "^5.7.3"
mlxtend = "^0.21.0"
seaborn = "^0.12.2"
pygam = "^0.8.0"
hmmlearn = "^0.2.8"
arch = "^5.3.1"
pybats = "^0.0.5"
anticipy = "^0.2.1"
microprediction = "^1.1.34"
ta = "^0.10.2"
tsaug = "^0.2.1"
neuralprophet = "^0.5.4"
pyts = "^0.12.0"
finnhub-python = "^2.4.17"
textblob = "^0.17.1"
python-dotenv = "^1.0.0"
yfinance = "^0.2.16"
darts = "^0.23.1"
quant-invest-lab = "0.2.5"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
